Bug 345014 - Launching kpat from the menu blocks the panel
Summary: Launching kpat from the menu blocks the panel
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.6
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Stephan Kulow
URL: https://git.reviewboard.kde.org/r/123...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-10 15:17 UTC by demm
Modified: 2015-03-19 11:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.03.95
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description demm 2015-03-10 15:17:12 UTC
When launching kpat from the menu, the applications runs fine, but the panle is frozen, no longer accessible.  Panel is accessible again when closing kpat, but a pop-up shows:
KDEInit could not launch '/usr/bin/kpat'

A workaround for this issue is to comment out line 126 of org.kde.kpat.desktop
#X-DBUS-StartupType=Multi
Applications launches and works correct then, no panel freeze or pop-up on closing.

Similar bugs were fixed for kate and ksysguard with these commits:
http://commits.kde.org/kate/5207e49a84145e21060f3b5beff302a437cfeccd
http://quickgit.kde.org/?p=ksysguard.git&a=commitdiff&h=a148102e8ed56c7a8d0f790fad2f9366b27882d4


Reproducible: Always
Comment 1 demm 2015-03-10 15:41:08 UTC
Not sure if the version listed above is the used one for kpat frameworks 5 based.  This report is for kpat 15.03.80.
Comment 2 Hrvoje Senjan 2015-03-19 11:11:37 UTC
Git commit a7ecc187bda7c708eafc45dedcd9807d413f6d02 by Hrvoje Senjan.
Committed on 19/03/2015 at 11:10.
Pushed by hrvojes into branch 'Applications/15.04'.

Unbreak startup via KRun (krunner/kickoff, etc)

We need to register to DBus, otherwise klauncher will block.
Also removed caption option, use qwindowtitle instead.
FIXED-IN: 15.03.95
REVIEW: 123041

M  +1    -1    CMakeLists.txt
M  +3    -0    main.cpp
M  +1    -1    org.kde.kpat.desktop

http://commits.kde.org/kpat/a7ecc187bda7c708eafc45dedcd9807d413f6d02