Unbreak startup via KRun (krunner/kickoff, etc)

We need to register to DBus, otherwise klauncher will block.
Also removed caption option, use qwindowtitle instead.

BUG: 345014
FIXED-IN: 15.03.95
REVIEW: 123041